Modified getRecipes by filter and ingredient. Now both are together