@@ -8,7 +8,6 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -24,7 +23,8 @@ import org.springframework.web.multipart.MultipartFile;
 
 import com.brenda.recetario.entity.Recipe;
 import com.brenda.recetario.enums.RecipeCategory;
-import com.brenda.recetario.exceptions.ImageDeletionException;
+import com.brenda.recetario.exceptions.InvalidDataException;
+import com.brenda.recetario.exceptions.RecipeNotFoundException;
 import com.brenda.recetario.models.RecipeCreateDTO;
 import com.brenda.recetario.models.RecipeFilteredResponseDTO;
 import com.brenda.recetario.models.RecipeResponseDTO;
@@ -36,17 +36,18 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class RecipeServiceTest {
+
     @Mock
     private RecipeRepository recipeRepository;
 
     @Mock
     private ImageService imageService;
 
-    @InjectMocks
-    private RecipeService recipeService;
-
     @Mock
     private MongoTemplate mongoTemplate;
+
+    @InjectMocks
+    private RecipeService recipeService;
 
     @BeforeEach
     void setUp() {
@@ -55,444 +56,198 @@ public class RecipeServiceTest {
 
     @Test
     void givenValidDtoAndImage_whenCreateRecipe_thenRecipeIsSavedWithImageUrl() throws Exception {
-        // Given
         RecipeCreateDTO dto = TestDataFactory.createRecipeCreateDTO();
+        MultipartFile image = mock(MultipartFile.class);
 
-        MultipartFile image = mock(MultipartFile.class); // Creates a Multipartfile mock for not to upload a real file
-        when(image.isEmpty()).thenReturn(false); // Simulates that the file exists and it is not empty
-        when(imageService.uploadImage(image)).thenReturn("http://img.com/pizza.png"); // When the image service is
-                                                                                      // called with this mock, returns
-                                                                                      // the URL that I'm gonna use in
-                                                                                      // the assertions
+        when(image.isEmpty()).thenReturn(false);
+        when(imageService.uploadImage(image)).thenReturn("http://img.com/pizza.png");
 
-        // When
         Recipe recipe = recipeService.createRecipe(dto, image);
 
-        // Then
-        verify(recipeRepository).save(any(Recipe.class)); // Verifies that "save" was called
-        verify(imageService).uploadImage(image); // Verifies that tried to upload the image
-        assertThat(recipe.getTitle()).isEqualTo("Pizza"); // Verifies the result
-        assertThat(recipe.getImageUrl()).isEqualTo("http://img.com/pizza.png");// Verifies the result
-    }
-
-    @Test
-    void givenValidDtoWithoutImage_whenCreateRecipe_thenRecipeIsSavedWithoutImageUrl() {
-        // Given
-        RecipeCreateDTO dto = TestDataFactory.createRecipeCreateDTO();
-
-        // When
-        Recipe recipe = recipeService.createRecipe(dto, null); // Image null, the method doesn't have to call to upload
-                                                               // service
-
-        // Then
-        verify(recipeRepository).save(any(Recipe.class));
-        verify(imageService, never()).uploadImage(any()); // Verifies that upload method wasn't called
-        assertThat(recipe.getImageUrl()).isNull(); // Verifies that the URL is null
-    }
-
-    @Test
-    void givenErrorWhenSavingRecipe_thenDeletesUploadedImageAndThrowsException() throws Exception {
-        // Given
-        RecipeCreateDTO dto = TestDataFactory.createRecipeCreateDTO();
-
-        MultipartFile image = mock(MultipartFile.class);
-        when(image.isEmpty()).thenReturn(false);
-        when(imageService.uploadImage(image)).thenReturn("http://img.com/pizza.png");
-
-        doThrow(new RuntimeException("DB error")).when(recipeRepository).save(any(Recipe.class)); // Simulates an DB
-                                                                                                  // error and throws an
-                                                                                                  // exception
-
-        // When + then
-        assertThatThrownBy(() -> recipeService.createRecipe(dto, image))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Error creando la receta"); // Verifies that error was thrown with the correct
-                                                                  // message
-
-        verify(imageService).deleteImage("http://img.com/pizza.png"); // Verifies that in catch part, the service
-                                                                      // tried to delete the image that was uploaded
-    }
-
-    @Test
-    void givenExisgtingRecipeId_whenGetRecipeById_thenReturnRecipeResponseDTO() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
-
-        when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
-
-        // When
-        RecipeResponseDTO result = recipeService.getRecipeById("123");
-
-        // Then
-        assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo("123");
-        assertThat(result.getTitle()).isEqualTo("Pizza");
-        assertThat(result.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(result.getIngredients()).containsExactly("Harina", "Agua");
-        assertThat(result.getInstructions()).isEqualTo("Hornear 20 min");
-        assertThat(result.getFit()).isTrue();
-        assertThat(result.getImageUrl()).isEqualTo("http://test.com/cheesepizza.jpg");
-
-        verify(recipeRepository).findById("123");
-
-    }
-
-    @Test
-    void givenNonExisgtingRecipeId_whenGetRecipeById_thenThrowException() {
-        // Given
-        when(recipeRepository.findById("999")).thenReturn(Optional.empty());
-
-        // When / Then
-        assertThatThrownBy(() -> recipeService.getRecipeById("999"))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessage("La receta especificada no existe.");
-
-        verify(recipeRepository).findById("999");
-    }
-
-    @Test
-    void givenValidDtoAndImage_whenUpdateRecipe_thenRecipeIsUpdatedWithImageUrl() throws Exception {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
-
-        when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
-
-        RecipeUpdateDTO dto = TestDataFactory.createRecipeUpdateDTO();
-
-        MultipartFile image = mock(MultipartFile.class);
-        when(image.isEmpty()).thenReturn(false);
-        when(imageService.uploadImage(image)).thenReturn("http://img.com/pizza.png");
-
-        // When
-        recipe = recipeService.updateRecipe(dto, image);
-
-        // Then
         verify(recipeRepository).save(any(Recipe.class));
         verify(imageService).uploadImage(image);
-        verify(imageService).deleteImage("http://test.com/cheesepizza.jpg");
         assertThat(recipe.getTitle()).isEqualTo("Pizza");
-        assertThat(recipe.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(recipe.getIngredients()).containsExactly("harina", "agua", "queso");
-        assertThat(recipe.getInstructions()).isEqualTo("Mezclar y hornear");
-        assertThat(recipe.getFit()).isFalse();
         assertThat(recipe.getImageUrl()).isEqualTo("http://img.com/pizza.png");
     }
 
     @Test
-    void givenValidDtoAndWithoutUpdatingImage_whenUpdateRecipe_thenRecipeIsUpdatedWithoutUpdatingImage() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
+    void givenValidDtoWithoutImage_whenCreateRecipe_thenRecipeIsSavedWithoutImageUrl() {
+        RecipeCreateDTO dto = TestDataFactory.createRecipeCreateDTO();
 
-        when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
+        Recipe recipe = recipeService.createRecipe(dto, null);
 
-        RecipeUpdateDTO dto = TestDataFactory.createRecipeUpdateDTO();
-
-        // When
-        recipe = recipeService.updateRecipe(dto, null);
-
-        // Then
         verify(recipeRepository).save(any(Recipe.class));
         verify(imageService, never()).uploadImage(any());
-        verify(imageService, never()).deleteImage(any());
-        assertThat(recipe.getTitle()).isEqualTo("Pizza");
-        assertThat(recipe.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(recipe.getIngredients()).containsExactly("harina", "agua", "queso");
-        assertThat(recipe.getInstructions()).isEqualTo("Mezclar y hornear");
-        assertThat(recipe.getFit()).isFalse();
-        assertThat(recipe.getImageUrl()).isEqualTo("http://test.com/cheesepizza.jpg");
-    }
-
-    @Test
-    void givenValidDtoWithoutExistingImageAndWithoutNewImage_whenUpdateRecipe_thenRecipeIsUpdatedWithoutAnImage() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipeWithoutImage();
-
-        when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
-
-        RecipeUpdateDTO dto = TestDataFactory.createRecipeUpdateDTO();
-
-        // When
-        recipe = recipeService.updateRecipe(dto, null);
-
-        // Then
-        verify(recipeRepository).save(any(Recipe.class));
-        verify(imageService, never()).uploadImage(any());
-        verify(imageService, never()).deleteImage(any());
-        assertThat(recipe.getTitle()).isEqualTo("Pizza");
-        assertThat(recipe.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(recipe.getIngredients()).containsExactly("harina", "agua", "queso");
-        assertThat(recipe.getInstructions()).isEqualTo("Mezclar y hornear");
-        assertThat(recipe.getFit()).isFalse();
         assertThat(recipe.getImageUrl()).isNull();
     }
 
     @Test
-    void givenNonExisgtingRecipeId_whenUpdateRecipe_thenThrowException() {
-        RecipeUpdateDTO dto = new RecipeUpdateDTO();
-        dto.setId("999");
-        when(recipeRepository.findById("999")).thenReturn(Optional.empty());
+    void givenErrorWhenSavingRecipe_thenDeletesUploadedImageAndThrowsException() throws Exception {
+        RecipeCreateDTO dto = TestDataFactory.createRecipeCreateDTO();
+        MultipartFile image = mock(MultipartFile.class);
 
-        // When / Then
-        assertThatThrownBy(() -> recipeService.updateRecipe(dto, null))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessage("La receta especificada no existe.");
+        when(image.isEmpty()).thenReturn(false);
+        when(imageService.uploadImage(image)).thenReturn("http://img.com/pizza.png");
+        doThrow(new RuntimeException("DB error")).when(recipeRepository).save(any(Recipe.class));
 
-        verify(recipeRepository).findById("999");
+        assertThatThrownBy(() -> recipeService.createRecipe(dto, image))
+                .isInstanceOf(InvalidDataException.class)
+                .hasMessageContaining("Error creando la receta");
+
+        verify(imageService).deleteImage("http://img.com/pizza.png");
     }
 
     @Test
-    void givenErrorWhenUpdatingRecipe_thenThrowsException() throws Exception {
-        // Given
+    void givenExistingRecipeId_whenGetRecipeById_thenReturnRecipeResponseDTO() {
         Recipe recipe = TestDataFactory.createRecipe();
-
         when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
 
-        RecipeUpdateDTO dto = TestDataFactory.createRecipeUpdateDTO();
+        RecipeResponseDTO result = recipeService.getRecipeById("123");
 
+        assertThat(result).isNotNull();
+        assertThat(result.getId()).isEqualTo("123");
+        assertThat(result.getTitle()).isEqualTo("Pizza");
+        verify(recipeRepository).findById("123");
+    }
+
+    @Test
+    void givenNonExistingRecipeId_whenGetRecipeById_thenThrowException() {
+        when(recipeRepository.findById("999")).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> recipeService.getRecipeById("999"))
+                .isInstanceOf(RecipeNotFoundException.class)
+                .hasMessage("La receta especificada no existe.");
+    }
+
+    @Test
+    void givenValidDtoAndImage_whenUpdateRecipe_thenRecipeIsUpdatedWithImageUrl() throws Exception {
+        Recipe recipe = TestDataFactory.createRecipe();
+        RecipeUpdateDTO dto = TestDataFactory.createRecipeUpdateDTO();
         MultipartFile image = mock(MultipartFile.class);
+
+        when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
         when(image.isEmpty()).thenReturn(false);
         when(imageService.uploadImage(image)).thenReturn("http://img.com/pizza.png");
 
-        doThrow(new RuntimeException("DB error")).when(recipeRepository).save(any(Recipe.class));
+        recipe = recipeService.updateRecipe(dto, image);
 
-        // When + then
-        assertThatThrownBy(() -> recipeService.updateRecipe(dto, image))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessageContaining("Error actualizando la receta");
+        verify(recipeRepository).save(any(Recipe.class));
+        verify(imageService).uploadImage(image);
         verify(imageService).deleteImage("http://test.com/cheesepizza.jpg");
+        assertThat(recipe.getImageUrl()).isEqualTo("http://img.com/pizza.png");
     }
 
     @Test
-    void givenNonExisgtingRecipeId_whenDeleteRecipe_thenThrowException() {
-        // Given
-        when(recipeRepository.findById("999")).thenReturn(Optional.empty());
-
-        // When / Then
-        assertThatThrownBy(() -> recipeService.deleteRecipe("999"))
-                .isInstanceOf(RuntimeException.class)
-                .hasMessage("La receta especificada no existe.");
-
-        verify(recipeRepository).findById("999");
-    }
-
-    @Test
-    void givenValidRecipeIdWithoutImage_whenDeleteRecipe_thenRecipeIsDeleted() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipeWithoutImage();
+    void givenValidDtoWithoutImage_whenUpdateRecipe_thenRecipeIsUpdatedWithoutImageChange() {
+        Recipe recipe = TestDataFactory.createRecipe();
+        RecipeUpdateDTO dto = TestDataFactory.createRecipeUpdateDTO();
 
         when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
 
-        // When
-        recipeService.deleteRecipe(recipe.getId());
+        recipe = recipeService.updateRecipe(dto, null);
 
-        // Then
-        verify(recipeRepository).delete(any(Recipe.class));
+        verify(recipeRepository).save(any(Recipe.class));
+        verify(imageService, never()).uploadImage(any());
         verify(imageService, never()).deleteImage(any());
     }
 
     @Test
-    void givenValidRecipeIdWithImage_whenDeleteRecipe_thenRecipeAndImageAreDeleted() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
+    void givenNonExistingRecipeId_whenUpdateRecipe_thenThrowException() {
+        RecipeUpdateDTO dto = new RecipeUpdateDTO();
+        dto.setId("999");
+        when(recipeRepository.findById("999")).thenReturn(Optional.empty());
 
-        when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
-
-        // When
-        recipeService.deleteRecipe(recipe.getId());
-
-        // Then
-        verify(recipeRepository).delete(any(Recipe.class));
-        verify(imageService).deleteImage("http://test.com/cheesepizza.jpg");
+        assertThatThrownBy(() -> recipeService.updateRecipe(dto, null))
+                .isInstanceOf(RecipeNotFoundException.class)
+                .hasMessage("La receta especificada no existe.");
     }
 
     @Test
-    void givenValidRecipeIdWithImage_whenImageDeletionFails_thenRecipeIsDeletedAnyway() {
-        // Given
+    void givenValidRecipeIdWithImage_whenDeleteRecipe_thenRecipeAndImageDeleted() {
         Recipe recipe = TestDataFactory.createRecipe();
         when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
 
-        doThrow(new ImageDeletionException("Error al eliminar la imagen"))
-                .when(imageService).deleteImage("http://test.com/cheesepizza.jpg");
+        recipeService.deleteRecipe("123");
 
-        // When
-        recipeService.deleteRecipe(recipe.getId());
-
-        // Then
         verify(imageService).deleteImage("http://test.com/cheesepizza.jpg");
-        verify(recipeRepository).delete(any(Recipe.class));
+        verify(recipeRepository).delete(recipe);
     }
 
     @Test
-    void givenNoFilters_whenGetAllRecipesWithFilter_thenReturnAllRecipesPaged() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
-        List<Recipe> recipeList = List.of(recipe);
+    void givenValidRecipeIdWithoutImage_whenDeleteRecipe_thenOnlyRecipeDeleted() {
+        Recipe recipe = TestDataFactory.createRecipeWithoutImage();
+        when(recipeRepository.findById("123")).thenReturn(Optional.of(recipe));
 
-        when(mongoTemplate.find(any(Query.class), eq(Recipe.class)))
-                .thenReturn(recipeList);
-        when(mongoTemplate.count(any(Query.class), eq(Recipe.class)))
-                .thenReturn(1L);
+        recipeService.deleteRecipe("123");
 
-        // When
-        Page<RecipeFilteredResponseDTO> result = recipeService.getAllRecipesWithFilter(null, null, 0, 10);
-
-        // Then
-        assertThat(result).isNotNull();
-        assertThat(result.getContent()).hasSize(1);
-        RecipeFilteredResponseDTO dto = result.getContent().get(0);
-        assertThat(dto.getTitle()).isEqualTo("Pizza");
-        assertThat(dto.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(dto.getFit()).isTrue();
-
-        verify(mongoTemplate).find(any(Query.class), eq(Recipe.class));
-        verify(mongoTemplate).count(any(Query.class), eq(Recipe.class));
+        verify(recipeRepository).delete(recipe);
+        verify(imageService, never()).deleteImage(any());
     }
 
     @Test
-    void givenCategoryFilter_whenGetAllRecipesWithFilter_thenReturnRecipesPagedWithThatCategory() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
-        List<Recipe> recipeList = List.of(recipe);
-        List<RecipeCategory> categories = List.of(RecipeCategory.CENA);
+    void givenNonExistingRecipeId_whenDeleteRecipe_thenThrowException() {
+        when(recipeRepository.findById("999")).thenReturn(Optional.empty());
 
-        when(mongoTemplate.find(any(Query.class), eq(Recipe.class)))
-                .thenReturn(recipeList);
-        when(mongoTemplate.count(any(Query.class), eq(Recipe.class)))
-                .thenReturn(1L);
-
-        // When
-        Page<RecipeFilteredResponseDTO> result = recipeService.getAllRecipesWithFilter(categories, null, 0, 10);
-
-        // Then
-        assertThat(result).isNotNull();
-        assertThat(result.getContent()).hasSize(1);
-        RecipeFilteredResponseDTO dto = result.getContent().get(0);
-        assertThat(dto.getTitle()).isEqualTo("Pizza");
-        assertThat(dto.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(dto.getFit()).isTrue();
-
-        verify(mongoTemplate).find(any(Query.class), eq(Recipe.class));
-        verify(mongoTemplate).count(any(Query.class), eq(Recipe.class));
+        assertThatThrownBy(() -> recipeService.deleteRecipe("999"))
+                .isInstanceOf(RecipeNotFoundException.class)
+                .hasMessage("La receta especificada no existe.");
     }
 
     @Test
-    void givenFitFilter_whenGetAllRecipesWithFilter_thenReturnRecipesPagedFilteredByFit() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
-        List<Recipe> recipeList = List.of(recipe);
-
-        when(mongoTemplate.find(any(Query.class), eq(Recipe.class)))
-                .thenReturn(recipeList);
-        when(mongoTemplate.count(any(Query.class), eq(Recipe.class)))
-                .thenReturn(1L);
-
-        // When
-        Page<RecipeFilteredResponseDTO> result = recipeService.getAllRecipesWithFilter(null, true, 0,
-                10);
-
-        // Then
-        assertThat(result).isNotNull();
-        assertThat(result.getContent()).hasSize(1);
-        RecipeFilteredResponseDTO dto = result.getContent().get(0);
-        assertThat(dto.getTitle()).isEqualTo("Pizza");
-        assertThat(dto.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(dto.getFit()).isTrue();
-
-        verify(mongoTemplate).find(any(Query.class), eq(Recipe.class));
-        verify(mongoTemplate).count(any(Query.class), eq(Recipe.class));
-    }
-
-    @Test
-    void givenFitAndCategoryFilter_whenGetAllRecipesWithFilter_thenReturnRecipesPagedFilteredByFitAndCategory() {
-        // Given
-        Recipe recipe = TestDataFactory.createRecipe();
-        List<Recipe> recipeList = List.of(recipe);
-        List<RecipeCategory> categories = List.of(RecipeCategory.CENA);
-
-        when(mongoTemplate.find(any(Query.class), eq(Recipe.class)))
-                .thenReturn(recipeList);
-        when(mongoTemplate.count(any(Query.class), eq(Recipe.class)))
-                .thenReturn(1L);
-
-        // When
-        Page<RecipeFilteredResponseDTO> result = recipeService.getAllRecipesWithFilter(categories, true, 0, 10);
-
-        // Then
-        assertThat(result).isNotNull();
-        assertThat(result.getContent()).hasSize(1);
-        RecipeFilteredResponseDTO dto = result.getContent().get(0);
-        assertThat(dto.getTitle()).isEqualTo("Pizza");
-        assertThat(dto.getCategories()).containsExactly(RecipeCategory.CENA);
-        assertThat(dto.getFit()).isTrue();
-
-        verify(mongoTemplate).find(any(Query.class), eq(Recipe.class));
-        verify(mongoTemplate).count(any(Query.class), eq(Recipe.class));
-    }
-
-    @Test
-    void givenNullIngredients_whenGetAllRecipesWithIngredients_thenReturnAllRecipesPaged() {
-        // Given
+    void givenNoFilters_whenSearchRecipes_thenReturnAllPaged() {
         Recipe recipe = TestDataFactory.createRecipe();
         List<Recipe> recipeList = List.of(recipe);
 
         when(mongoTemplate.find(any(Query.class), eq(Recipe.class))).thenReturn(recipeList);
         when(mongoTemplate.count(any(Query.class), eq(Recipe.class))).thenReturn(1L);
 
-        // When
-        Page<RecipeFilteredResponseDTO> result = recipeService.getAllRecipesWithIngredients(null, 0, 10);
+        Page<RecipeFilteredResponseDTO> result = recipeService.searchRecipes(null, null, null, 0, 10);
 
-        // Then
         assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
-        RecipeFilteredResponseDTO dto = result.getContent().get(0);
-        assertThat(dto.getTitle()).isEqualTo("Pizza");
-
-        verify(mongoTemplate).find(any(Query.class), eq(Recipe.class));
-        verify(mongoTemplate).count(any(Query.class), eq(Recipe.class));
+        assertThat(result.getContent().get(0).getTitle()).isEqualTo("Pizza");
     }
 
     @Test
-    void givenEmptyIngredients_whenGetAllRecipesWithIngredients_thenReturnAllRecipesPaged() {
-        // Given
+    void givenCategoryFilter_whenSearchRecipes_thenReturnMatchingRecipes() {
         Recipe recipe = TestDataFactory.createRecipe();
         List<Recipe> recipeList = List.of(recipe);
 
         when(mongoTemplate.find(any(Query.class), eq(Recipe.class))).thenReturn(recipeList);
         when(mongoTemplate.count(any(Query.class), eq(Recipe.class))).thenReturn(1L);
 
-        // When
-        Page<RecipeFilteredResponseDTO> result = recipeService.getAllRecipesWithIngredients(Collections.emptyList(), 0,
-                10);
+        Page<RecipeFilteredResponseDTO> result = recipeService.searchRecipes(List.of("CENA"), null, null, 0, 10);
 
-        // Then
-        assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
-
-        verify(mongoTemplate).find(any(Query.class), eq(Recipe.class));
-        verify(mongoTemplate).count(any(Query.class), eq(Recipe.class));
+        assertThat(result.getContent().get(0).getCategories())
+                .contains(RecipeCategory.CENA);
     }
 
     @Test
-    void givenIngredientsList_whenGetAllRecipesWithIngredients_thenReturnRecipesPagedFilteredByIngredients() {
-        // Given
+    void givenFitFilter_whenSearchRecipes_thenReturnFilteredByFit() {
         Recipe recipe = TestDataFactory.createRecipe();
         List<Recipe> recipeList = List.of(recipe);
-
-        List<String> ingredients = List.of("Harina", "Agua");
 
         when(mongoTemplate.find(any(Query.class), eq(Recipe.class))).thenReturn(recipeList);
         when(mongoTemplate.count(any(Query.class), eq(Recipe.class))).thenReturn(1L);
 
-        // When
-        Page<RecipeFilteredResponseDTO> result = recipeService.getAllRecipesWithIngredients(ingredients, 0, 10);
+        Page<RecipeFilteredResponseDTO> result = recipeService.searchRecipes(null, true, null, 0, 10);
 
-        // Then
-        assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
-        RecipeFilteredResponseDTO dto = result.getContent().get(0);
-        assertThat(dto.getTitle()).isEqualTo("Pizza");
+        assertThat(result.getContent().get(0).getFit()).isTrue();
+    }
 
-        verify(mongoTemplate).find(any(Query.class), eq(Recipe.class));
-        verify(mongoTemplate).count(any(Query.class), eq(Recipe.class));
+    @Test
+    void givenSearchTerm_whenSearchRecipes_thenReturnMatchingResults() {
+        Recipe recipe = TestDataFactory.createRecipe();
+        List<Recipe> recipeList = List.of(recipe);
+
+        when(mongoTemplate.find(any(Query.class), eq(Recipe.class))).thenReturn(recipeList);
+        when(mongoTemplate.count(any(Query.class), eq(Recipe.class))).thenReturn(1L);
+
+        Page<RecipeFilteredResponseDTO> result = recipeService.searchRecipes(null, null, "pizza", 0, 10);
+
+        assertThat(result.getContent()).hasSize(1);
+        assertThat(result.getContent().get(0).getTitle()).containsIgnoringCase("pizza");
     }
 }
